# imagesync

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Makefile  README.md  cosign.pub  images.yaml  images.yaml.example  imagesync.py  pyproject.toml
.github/workflows/: black.yaml  build-release.yaml  versioning.yaml
internal/: check-version.py
modules/: collect.py  transfer.py
modules/utils/: cache.py  config.py  image.py  logger.py
