[tool.poetry]
name = "imagesync"
version = "0.1.0"
description = "Tool used to sync images contained in image.yaml from original location to the configured destination registry"
authors = ["Tim Seagren <seagren.tim@solute.us>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
requests = "^2.28.1"
ibmodules = {git = "https://repo1.dso.mil/ironbank-tools/ironbank-pipeline.git", rev = "master"}

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
